--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -190,6 +190,14 @@ h1, h2, h3, h4, h5, h6 {
 	font-size: 80px;
 	font-weight: bold;
 }
+    #workwrap h2 {
+        color: #ffffff;
+        padding-top: 10px;
+        padding-bottom: 20px;
+        letter-spacing: 4px;
+        font-size: 60px;
+        font-weight: bold;
+    }
 
 #workwrap h4 {
 	font-weight: 400;
