--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,6 +53,13 @@
 	margin-bottom: 80px;
 }
 
+.ani_hidden{
+	opacity:0;
+}
+.ani_visible{
+	opacity:1;
+}
+
 /* ==========================================================================
    General styles
    ========================================================================== */
@@ -72,36 +79,12 @@ h1, h2, h3, h4, h5, h6 {
     color: #4a4a4a;
 }
 
-
-.navbar-brand {
-	font-weight: 700;
-}
-
-.navbar-default .navbar-brand {
-	color: #1abc9c;
-}
-
-.navbar-default {
-	background-color: transparent;
-	border-color: transparent;
-}
-
-.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
-	color: #1abc9c;
-	background-color: transparent;
-	border-bottom: 2px solid #1abc9c
-}
-
-.navbar-default .navbar-nav > li > a {
-	color: #1abc9c;
-}
-
 /* ==========================================================================
    Wrap Sections
    ========================================================================== */
 
 #headerwrap {
-	background: url(../img/back.jpg) no-repeat center top;
+	background: url(../img/wall.jpg) no-repeat center top;
 	margin-top: -70px;
 	padding-top: 250px;
 	text-align:center;
@@ -126,13 +109,14 @@ h1, h2, h3, h4, h5, h6 {
 	padding-top: 10px;
 	padding-bottom: 20px;
 	letter-spacing: 4px;
-	font-size: 80px;
+	font-size: 3em;
 	font-weight: bold;
 }
 
 #headerwrap h4 {
 	font-weight: 400;
-	color: #ffffff
+	color: #ffffff;
+	font-size: 2em;
 }
 
 #social {
@@ -228,14 +212,4 @@ h1, h2, h3, h4, h5, h6 {
 #aboutwrap h1{
     font-size:70px;
     color : white;
-}
-
-
-/* Gallery */
-.gallery {
-	margin-top: 30px;
-}
-
-.gallery img:hover {
-	opacity: 0.4;
 }
