--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -174,14 +174,14 @@ h1, h2, h3, h4, h5, h6 {
 	font-size: 80px;
 	font-weight: bold;
 }
-    #workwrap h2 {
-        color: #ffffff;
-        padding-top: 10px;
-        padding-bottom: 20px;
-        letter-spacing: 4px;
-        font-size: 60px;
-        font-weight: bold;
-    }
+#workwrap h2 {
+    color: #ffffff;
+    padding-top: 10px;
+    padding-bottom: 20px;
+    letter-spacing: 4px;
+    font-size: 60px;
+    font-weight: bold;
+}
 
 #workwrap h4 {
 	font-weight: 400;
@@ -212,4 +212,29 @@ h1, h2, h3, h4, h5, h6 {
 #aboutwrap h1{
     font-size:70px;
     color : white;
+}
+
+.workin{
+
+}
+.workin .about{
+
+}
+.workin .workContainer{
+
+}
+.workin .workContainer .work{
+    
+}
+.workin .workContainer .work h2{
+
+}
+.workin .workContainer .work h2 span{
+    font-weight: 500;
+    font-size: 1.5rem;
+    background: #a2a2a2;
+    border-radius: 6px;
+    padding: 3px;
+    color: white;
+    margin-right: 3px;
 }
